# simbirsoft-task

./: README.md  pyproject.toml
allure-results/: 68bfd7ed-1d79-4946-a4d0-a9b7536a3be5-container.json  69b5a64d-46fe-487c-8c50-7145237736fb-result.json  c1366f28-592b-4443-8d7c-a1d8a07e5f94-result.json  eeb5fadb-6d10-49c4-9d57-6a689ccf0aaa-container.json
src/simbirproject/pages/: quiz_page.py
tests/: test_quiz.py
tests/pages/: quiz_page.py
