[project]
name = "simbirproject"
version = "0.1.0"
description = ""
authors = [
    {name = "mansur",email = "mansurgalimov161@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.36.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "simbirproject", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
